added product filter
